--- a/index.html
+++ b/index.html
@@ -2546,7 +2546,7 @@ btnDaftar.addEventListener('click', async () => {
       if (res.status === 'success') {
         toast('Berjaya', 'Pesakit berjaya didaftarkan (voucher)', 'success');
         updateNadiRowData(row);
-      loadDashboardData?.(); loadTCACallData?.(); location.hash = '#tca-call'; } else {
+      } else {
         throw new Error(res.message || 'Gagal mendaftar pesakit (voucher)');
       }
     } catch (e) {
@@ -4293,7 +4293,7 @@ window.saveNadiStateDebounced = window.saveNadiStateDebounced || function(){
     // Update main button label
     const btn = row.querySelector('.nadi-daftar');
     if (btn) {
-      btn.disabled = !((layak && layak.checked) || (vchr && vchr.checked));
+      btn.disabled = !((layak && layak.checked) || (vchr && vchr.checked && vDate && vDate.value));
       if (vchr && vchr.checked) btn.textContent = 'Daftar TCA';
       else btn.textContent = 'Daftar';
     }
@@ -4385,6 +4385,214 @@ window.saveNadiStateDebounced = window.saveNadiStateDebounced || function(){
 
   // Initial sweep (if any prefilled rows)
   cont.querySelectorAll('input').forEach(handle);
+})();
+</script>
+
+<script>
+(function(){
+  // Wait for DOM
+  document.addEventListener('DOMContentLoaded', function(){
+    try {
+      const nadiSection = document.querySelector('#nadi');
+      const nadiTable = document.querySelector('#nadi .nadi-table');
+      const nadiTbody = document.getElementById('nadiContainer');
+      if(!nadiTable || !nadiTbody) return;
+
+      // Map header text -> column index
+      const headerCells = Array.from(nadiTable.querySelectorAll('thead tr th'));
+      const headerIndexByText = {};
+      headerCells.forEach((th, i)=>{
+        headerIndexByText[th.textContent.trim().toLowerCase()] = i;
+      });
+
+      const idxTcaVoucher = headerIndexByText['tca voucher'] ?? headerIndexByText['tca voucher'] ?? headerIndexByText['tca voucher'.toLowerCase()];
+      const idxTarikhVoucher = headerIndexByText['tarikh tca (voucher)'];
+      const idxTindakan = headerIndexByText['tindakan'];
+      if (idxTcaVoucher == null || idxTindakan == null) {
+        console.warn('[Enhance] Tidak jumpa kolum TCA voucher / Tindakan. Enhancement dilangkau.');
+        return;
+      }
+
+      function getCell(row, idx){
+        return row && idx != null ? row.children[idx] : null;
+      }
+
+      // Helper: find or create the "Daftar TCA" button in a row
+      function ensureDaftarButton(row){
+        const tdTindakan = getCell(row, idxTindakan);
+        if (!tdTindakan) return null;
+        // Try find existing
+        let btn = Array.from(tdTindakan.querySelectorAll('button, a'))
+          .find(el => /daftar(\s+tca)?/i.test((el.textContent||'').trim()));
+        if (!btn) {
+          // Create a conservative small primary button if none exists
+          btn = document.createElement('button');
+          btn.type = 'button';
+          btn.className = 'btn btn-sm btn-primary btn-daftar-tca';
+          btn.textContent = 'Daftar TCA';
+          tdTindakan.appendChild(btn);
+        }
+        return btn;
+      }
+
+      // Toggle enable/disable based on voucher checkbox state
+      function syncRow(row){
+        const tdVoucher = getCell(row, idxTcaVoucher);
+        if (!tdVoucher) return;
+        const chk = tdVoucher.querySelector('input[type="checkbox"]');
+        const btn = ensureDaftarButton(row);
+        if (!btn) return;
+        const enabled = !!(chk && chk.checked);
+        btn.disabled = !enabled;
+        btn.classList.toggle('disabled', !enabled);
+        btn.setAttribute('aria-disabled', (!enabled).toString());
+        // Visual cue
+        if (!enabled) btn.title = 'Tandakan kotak "TCA voucher" untuk aktifkan pendaftaran';
+        else btn.removeAttribute('title');
+      }
+
+      // Initial sync for existing rows
+      Array.from(nadiTbody.querySelectorAll('tr')).forEach(syncRow);
+
+      // Observe mutations because rows are added dynamically
+      const mo = new MutationObserver(muts => {
+        muts.forEach(m => {
+          m.addedNodes && Array.from(m.addedNodes).forEach(node=>{
+            if (node.nodeType === 1 && node.matches('tr')) syncRow(node);
+          });
+        });
+      });
+      mo.observe(nadiTbody, { childList: true });
+
+      // Delegate change on checkbox
+      nadiTbody.addEventListener('change', function(e){
+        const tgt = e.target;
+        if (tgt && tgt.matches('input[type="checkbox"]')) {
+          const tr = tgt.closest('tr');
+          if (tr) syncRow(tr);
+        }
+      });
+
+      // Toast helper (non-intrusive)
+      function showToast(msg, variant){
+        variant = variant || 'primary';
+        const host = document.getElementById('toastContainer');
+        if (!host) return;
+        const el = document.createElement('div');
+        el.className = 'toast align-items-center text-bg-'+variant+' border-0 show';
+        el.setAttribute('role','alert');
+        el.style.opacity = '0.97';
+        el.innerHTML = '<div class="d-flex"><div class="toast-body">'+msg+'</div><button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button></div>';
+        host.appendChild(el);
+        // Auto remove after 4s
+        setTimeout(()=>{ el.remove(); }, 4000);
+      }
+
+      // Append to TCA lists (Dashboard + Page)
+      function appendToTcaLists(record){
+        // Dashboard today table
+        const dashBody = document.getElementById('tcaCallTable');
+        if (dashBody) {
+          if (dashBody.children.length === 1 && dashBody.children[0].querySelector('td')?.colSpan) {
+            dashBody.innerHTML = '';
+          }
+          const tr = document.createElement('tr');
+          tr.innerHTML = '<td>'+ (record.nama||'-') +'</td>'
+            +'<td>'+ (record.ic||'-') +'</td>'
+            +'<td>'+ (record.telefon||'-') +'</td>'
+            +'<td>'+ (record.alamat||'-') +'</td>'
+            +'<td>'+ (record.tarikh||'-') +'</td>'
+            +'<td><span class="badge text-bg-warning">TCA CALL</span></td>';
+          dashBody.appendChild(tr);
+        }
+        // TCA page table
+        const listBody = document.getElementById('tcaCallList');
+        if (listBody) {
+          if (listBody.children.length === 1 && listBody.children[0].querySelector('td')?.colSpan) {
+            listBody.innerHTML = '';
+          }
+          const tr = document.createElement('tr');
+          tr.innerHTML = '<td>'+ (record.nama||'-') +'</td>'
+            +'<td>'+ (record.ic||'-') +'</td>'
+            +'<td>'+ (record.telefon||'-') +'</td>'
+            +'<td>'+ (record.alamat||'-') +'</td>'
+            +'<td>'+ (record.tarikh||'-') +'</td>'
+            +'<td><span class="badge text-bg-warning">TCA CALL</span></td>';
+          listBody.appendChild(tr);
+        }
+        // Update badge
+        const badge = document.getElementById('badgeTCA');
+        if (badge) {
+          const current = parseInt(badge.textContent || '0', 10) || 0;
+          badge.textContent = String(current + 1);
+          badge.style.display = 'inline-block';
+        }
+      }
+
+      // Extract row data
+      function extractRowData(row){
+        const getText = (idx) => (getCell(row, idx)?.innerText || '').trim();
+        const getInputVal = (idx, sel) => {
+          const td = getCell(row, idx);
+          if (!td) return '';
+          const el = td.querySelector(sel || 'input, select, textarea, .view-mode');
+          if (!el) return td.innerText.trim();
+          if ('value' in el && el.value) return el.value.trim();
+          return (el.innerText||'').trim();
+        };
+        const idxNama = headerIndexByText['nama pesakit'];
+        const idxIC = headerIndexByText['no ic'];
+        const idxTel = headerIndexByText['telefon'] || headerIndexByText['no telefon'];
+        const idxAlamat = headerIndexByText['alamat'];
+        const tarikh = getInputVal(idxTarikhVoucher, 'input[type="date"], input, .view-mode');
+        return {
+          nama: getInputVal(idxNama),
+          ic: getInputVal(idxIC),
+          telefon: getInputVal(idxTel),
+          alamat: getInputVal(idxAlamat),
+          tarikh: tarikh
+        };
+      }
+
+      // Delegate click on "Daftar TCA" buttons
+      nadiTbody.addEventListener('click', function(e){
+        const target = e.target.closest('button, a');
+        if (!target) return;
+        const label = (target.textContent||'').trim().toLowerCase();
+        if (!/daftar(\s+tca)?/.test(label)) return;
+        // Only proceed if enabled
+        if (target.disabled || target.classList.contains('disabled')) {
+          showToast('Sila tandakan kotak "TCA voucher" terlebih dahulu.', 'secondary');
+          return;
+        }
+        const tr = target.closest('tr');
+        if (!tr) return;
+        const data = extractRowData(tr);
+        // Basic validation
+        if (!data.ic || !data.nama) {
+          showToast('Nama/IC tidak lengkap. Lengkapkan maklumat baris ini dahulu.', 'danger');
+          return;
+        }
+        // Optional: tarikh
+        if (!data.tarikh) {
+          showToast('Sila isi "Tarikh TCA (Voucher)" sebelum daftar.', 'warning');
+          return;
+        }
+        appendToTcaLists(data);
+        showToast('Berjaya didaftarkan untuk TCA CALL: ' + (data.nama||'-'), 'success');
+        // Auto switch ke halaman TCA Call (jika pengguna klik pada nav)
+        const tcaNav = document.querySelector('a.nav-link[href="#tca-call"]');
+        if (tcaNav) tcaNav.classList.add('active');
+        // Mark row subtly
+        tr.classList.add('table-success');
+        setTimeout(()=>tr.classList.remove('table-success'), 1500);
+      });
+
+      console.log('[Enhance] TCA voucher → Daftar TCA auto-enable diaktifkan.');
+    } catch(err){
+      console.error('[Enhance] Ralat enhancement:', err);
+    }
+  });
 })();
 </script>
 </body>
